@startuml Domain Model
skinparam DefaultFontName Arial
skinparam DefaultFontSize 16
skinparam DefaultFontStyle bold
skinparam ArrowThickness 2.2
title Domain Model - large scale view
hide empty members

class "Terminal" as terminal {
    - /results
}
class "DBRoutes" as DBRoutes {}
class "DBConnection" as DBConnection {}
class "DBCities" as DBCities {}
class "DBClient" as DBClient {}
class "Client" as client {
    - id
    - firstName
    - lastName
    - age
}
class "DBTrip" as DBTrip {}
class "Trip" as trip {
    - id
}
class "DBReservation" as DBReservation {}
class "Reservation" as reservation {
    - id
}
class "DBTicket" as DBTicket {}
class "Ticket" as ticket {
    - id
}


class "Routes" as routes {
    - routeID
    - departureDateTime
    - arrivalDateTime
    - traintype
    - daysofoperation
    - firstClassPrice
    - secondClassPrice
}
class "Connection" as connection {
    - id
    - /tripDuration
    - /qtyStops
    - /stopCities
    - /firstClassPrice
    - /secondClassPrice
    - /daysofoperation
}
class "Cities" as cities {
    - name: String
}

class "PopulateDB" as populateDB {}
note right of cities
    Because plantuml does not support
    manual layout editing, the diagram
    is split into 3 files to clarify the
    relationships between classes Cities, 
    Routes and Connection.
end note



DBConnection *-- "*  " connection
DBCities  *-- "* " cities
DBRoutes  *-- "*" routes
DBClient  *-- "* " client
DBTrip    *-- "* " trip
DBReservation *-- "* " reservation
DBTicket  *-- "* " ticket



cities "1..*    " -- "1..*      " cities 
client "*" -- "*" connection : "takes"

(client, connection) .right. reservation

terminal  -- DBRoutes : "accesses"

terminal -- populateDB : "accesses"

terminal  -- DBCities : "accesses"

terminal  -- DBConnection : "accesses"

terminal  -- DBClient : "accesses"

terminal  -- DBTrip : "accesses"

terminal  -- DBReservation : "accesses"

terminal  -- DBTicket : "accesses"

DBClient -[hidden]> DBConnection: "accesses"
DBReservation -[hidden]> DBTrip: "accesses"
DBTrip -[hidden]> DBClient: "accesses"
DBTicket -[hidden]> DBTrip: "accesses"
DBConnection  -[hidden]> DBCities: "accesses"
DBCities  -[hidden]> DBRoutes: "acces             ses"
connection  -[hidden]> cities: "accesses"
cities  -[hidden]> routes: "accesses"

(cities, cities) .. connection


connection "1" -- "1..3   " routes : "use"

cities "1" -right- "1" routes

cities "1" -right- "1" routes

reservation "1" -- "1" ticket : "documented by"

trip "1" -- "1..*   " reservation : "includes"

@enduml